--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,39 @@
+:root{
+  --text-color: #333;
+  --accent-color-green: #0a775f;
+  --accent-color-green-80: rgba(10, 119, 95, 0.8);
+  --accent-color-green-60: rgba(10, 119, 95, 0.6);
+  --accent-color-light-brown: #c99b67;
+  --accent-color-light-brown-80: rgb(201, 155, 103, 0.8);
+  --accent-color-light-brown-60: rgb(201, 155, 103, 0.6);
+  --light-brown: #f3d7b7;
+}
+@font-face {
+    font-family: "Roboto";
+    src: url("../coffeeroasters-fonts/Roboto-Regular.woff2") format("woff2"),
+        url("../coffeeroasters-fonts/Roboto-Regular.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("../coffeeroasters-fonts/Roboto-Bold.woff2") format("woff2"),
+        url("../coffeeroasters-fonts/Roboto-Bold.woff") format("woff");
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("../coffeeroasters-fonts/Roboto-Medium.woff2") format("woff2"),
+        url("../coffeeroasters-fonts/Roboto-Medium.woff") format("woff");
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
 /* GLOBAL */
 
 html{
@@ -5,7 +41,10 @@ html{
   height: 100%;
   scroll-behavior: smooth;
 }
-
+*:focus {
+  outline: 2px dashed var(--accent-color-green);
+  outline-offset: 2px;
+}
 *,
 ::after,
 ::before{
@@ -17,28 +56,168 @@ body{
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Arial", sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
-  line-height: 150%;
+  line-height: 1.75%;
   background-color: #fff;
-  color: #222;
+  color: var(--text-color);
 }
 
 
 /* CONTAINER */
 .container{
   width: 100%;
-  max-width: 1200px;
-  padding-left: 50px;
-  padding-right: 50px;
+  max-width: 1440px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
 }
 
+/* BUTTOM */
+.button {
+  display: inline-block;
+  text-decoration: none;
+  padding: 16px 24px;
+  border: none;
+  border-radius: 100px;
+  color:#fff;
+  font-weight: 500;
+  line-height: 19px;
+  text-align: center;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+.button-green {
+  background-color: var(--accent-color-green)
+}
+.button-green:hover {
+  background-color: var(--accent-color-green-80)
+}
+.button-green:active {
+  background-color: var(--accent-color-green-60)
+}
+
+/* SITE HEADER */
+.site-headeer-hero-wrapper{
+  background-image: url(../img/header-bgi.jpg);
+  background-color: #F3D7B7;
+}
+.site-header{
+  padding: 40px 50px;
+}
+.site-header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+.site-main-logo-link{
+  text-decoration: none;
+  display: flex;
+  flex-shrink: 0;
+}
+.site-main-logo-link:hover{
+  opacity: 0.8;
+}
+.site-main-logo-link:active {
+  opacity: 0.6;
+}
+.site-main-logo {
+  width: 235;
+  height: 24px;
+  object-fit: contain;
+}
+
+
+/* SITENAV */
+.sitenav-list {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+.sitenav-item {
+  list-style: none;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: normal;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+
+}
+.sitenav-item:not(:last-child) {
+  margin-right: 40px;
+}
+.sitenav-link {
+  display: block;
+  text-decoration: none;
+  color: var(--text-color);
+  white-space: nowrap;
+}
+
+.sitenav-link:hover{
+  color: var(--accent-color-green);
+}
+
+/* HERO */
+.hero-container {
+  display: flex;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.hero-info-wrapper {
+  width: 100%;
+  max-width: 730px;
+  padding-top: 116px;
+  margin-left: 150px;
+  padding-right: 116px;
+}
+.hero-heading {
+  margin: 0;
+  padding: 0;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 75px;
+  color: #000000;
+  margin-bottom: 24px;
+}
+.hero-text {
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
+  color: #000000;
+}
+
+.hero-text:not(:last-child){
+  margin-bottom: 34px;
+}
+
+.hero-img-index {
+  width: 710px;
+  height: 696px;
+}
 
 /* MAIN CONTENT */
 .main-content{
   flex-grow: 1;
+}
+
+/* RETENA SCREEN */
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+  .site-headeer-hero-wrapper{
+    background-image: url(../img/header-bgi@2x.jpg);
+  }
 }
