--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   --accent-color-light-brown: #c99b67;
   --accent-color-light-brown-80: rgb(201, 155, 103, 0.8);
   --accent-color-light-brown-60: rgb(201, 155, 103, 0.6);
-  --light-bgc: #f8f8f2;
+  --light-index-collection-bgc: #f8f8f2;
   --light-brown: #f3d7b7;
 }
 @font-face {
@@ -213,8 +213,11 @@ body{
 }
 
 /* INDEX-COLLECTION */
+.index-collection{
+  margin-bottom: 20px;
+}
 .index-collection-inner {
-  background-color: var(--light-bgc);
+  background-color: var(--light-index-collection-bgc);
   background-image: url(../img/index-collection-bgi.jpg);
 }
 .index-collection-heading {
@@ -266,7 +269,82 @@ body{
   font-weight: 400;
   font-size: 22px;
   line-height: 34px;
+  margin: 0;
 }
+
+.index-collection-item-text:not(:last-child){
+  margin-bottom: 10px;
+}
+
+/* INDEX-FEATURES */
+.index-features{
+  margin-bottom: 30px;
+}
+.index-features-inner {
+  padding: 50px 30px;
+  /* background-color: var(--accent-color-light-brown); */
+  background-image: url(../img/index-features-bgi.jpg);
+  /* background-size: 100% 703px; */
+  background-repeat: no-repeat;
+}
+.index-features-heading {
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 59px;
+  text-transform: uppercase;
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 10px;
+  margin: 0;
+  color: #fff;
+}
+.index-features-text {
+  margin: 0;
+  width: 100%;
+  max-width: 580px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 80px;
+  line-height: 28px;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.8);
+}
+.index-features-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  margin-left: -20px;
+  list-style: none;
+}
+.index-features-item {
+  width: calc(100% / 3 -20px);
+  margin-left: 20px;
+}
+.index-features-item-img {
+  object-fit: cover;
+  width: 433px;
+  height: 500px;
+  margin-bottom: 28px;
+}
+.index-features-item-heading {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 35px;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.index-features-item-text {
+  margin: 0;
+  width: 100%;
+  max-width: 377px;
+  font-size: 18px;
+  line-height: 28px;
+}
+.index-features-item-text:not(:last-child) {
+  margin-bottom: 10px;
+}
+
 /* RETENA SCREEN */
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
@@ -280,5 +358,8 @@ only screen and (                min-resolution: 2dppx) {
   }
   .index-collection {
     background-image: url(../img/index-collection-bgi@2x.jpg);
+  }
+  .index-features-inner {
+    background-image: url(../img/index-features-bgi@2x.jpg);
   }
 }
