--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ body{
   line-height: 1.75%;
   background-color: #fff;
   color: var(--text-color);
+  overflow-x: hidden;
 }
 
 
@@ -176,7 +177,7 @@ body{
 }
 
 /* HERO */
-.hero-container {
+.hero-inner{
   display: flex;
   padding-left: 0;
   padding-right: 0;
@@ -210,6 +211,17 @@ body{
   margin-bottom: 34px;
 }
 
+.hero-img-box{
+  display: flex;
+  position: relative;
+}
+
+.hero-badge{
+  position: absolute;
+  top: -70px;
+  left: -80px;
+}
+
 .hero-img-index {
   width: 710px;
   height: 696px;
@@ -227,8 +239,25 @@ body{
   margin-bottom: 20px;
 }
 .index-collection-inner {
+  position: relative;
   background-color: var(--light-index-collection-bgc);
   background-image: url(../img/index-collection-bgi.jpg);
+}
+
+.leaves-lift{
+  position: absolute;
+  top: 40px;
+  left: -158px;
+}
+.leaves-lift-light{
+  position: absolute;
+  bottom: 170px;
+  left: -190px;
+}
+.leaves-right-mix{
+  position: absolute;
+  bottom: 460px;
+  right: -290px;
 }
 .index-collection-heading {
   margin: 0;
@@ -358,10 +387,16 @@ body{
 
 /* HOW IT WORKING */
 .how-it-works-inner {
+  position: relative;
   background-color: var(--accent-color-green);
   background-image: url(../img/green-bgi.jpg);
   padding: 50px 30px;
   text-align: center;
+}
+.coffee-first-sticker{
+  position: absolute;
+  top: 63px;
+  right: 42px;
 }
 .how-it-works-heading {
   font-weight: 700;
@@ -370,9 +405,11 @@ body{
   text-align: center;
   text-transform: uppercase;
   color: #fff;
-  margin-bottom: 160px;
+  margin-top: 0;
+  margin-bottom: 0px;
 }
 .how-it-works-list {
+
   padding: 0;
   margin: 0;
   padding: 20px;
@@ -385,6 +422,7 @@ body{
 }
 
 .how-it-works-item {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: calc(100% / 3 -20px);
@@ -392,12 +430,25 @@ body{
   counter-increment: how-it-works;
 }
 .how-it-works-item::before {
+  z-index: 2;
   width: 60px;
   height: 60px;
   border: 4px solid var(--accent-color-light-brown);
   background-color: var(--light-brown);
   margin-bottom: 20px;
   content: "";
+}
+
+.how-it-works-item:not(:last-child):after{
+  position: absolute;
+  left: 30px;
+  top: 30px;
+  content: "";
+  width: 440px;
+  height: 3px;
+  background-image: url(../img/brown-dashed-line.svg);
+  background-repeat: no-repeat;
+
 }
 .how-it-works-info::before{
   content: "0"counter(how-it-works);
